--- a/values.yaml
+++ b/values.yaml
@@ -8,9 +8,10 @@ fullnameOverride: ""
 
 name: "my-workstation-1"
 
+docker_image: chaimeleon-eu.i3m.upv.es:10443/chaimeleon-library/tensorflow-interactive:dev
+
 ceph:
-  key: "XXXXXXXXXX"
-  user: "XXXXXXXXXX"
+  user: serlophug
 
 user:
   uid: 1000
@@ -22,16 +23,8 @@ user:
 
 dataset:
   id: "XXXXXXXXXXXXX"
-  gid_list: 
-    - 1500
+  gid_list: []
   mount_point: "/mnt/dataset"
-
-podSecurityContext: 
-  runAsUser: 1000
-  runAsGroup: 1000
-  supplementalGroups:
-    - 1500 
-  # fsGroup: 2000
 
 
 guacamoleConnectionCreation:
@@ -43,9 +36,6 @@ guacamoleConnectionCreation:
   guacamolePassword: "pepa"
   guacamole_url: "https://chaimeleon-eu.i3m.upv.es/guacamole/#/"
 
-
-
-
 datasets:
   rootfs_dir: "/data"
   rootfs_mount_dir: "/mnt/rootfs"
@@ -54,15 +44,3 @@ datasets:
     - "192.168.3.8:6789"
  
 securityContext: {}
-
-  # runAsUser: 1000 #{{ .Values.user.uid }}
-  # runAsGroup: 1000 #{{ .Values.user.gid }}
-  # #supplementalGroups:
-  # #  - 1500 
-  #   #{{- toYaml .Values.dataset.gid_list  | nindent 4}}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
