--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,7 @@
 #apiVersion: v2
 apiVersion: v3
-appVersion: ub1804_one2002_tf2.3.1_gpu_desktop_vnc_sshd
+#appVersion: ub1804_one2002_tf2.3.1_gpu_desktop_vnc_sshd
+appVersion: dev
 
 description: Deploy just a pod with TensorFlow oficial image with GPU enabled plus VNC and SSH services.
 
@@ -14,7 +15,7 @@ sources:
 - https://chaimeleon.eu/
 type: application
 
-version: 0.1.2-rc
+version: 0.1.3-dev
 
 maintainers:  
   - name: Sergio Lopez Huguet
@@ -22,9 +23,3 @@ maintainers:
   - name: Pau Lozano
     email: palollo@i3m.upv.es
 
-datasets:
-  rootfs_dir: "/data"
-  rootfs_mount_dir: "/mnt/rootfs"
-  datasets_dir: "/datasets"
-  monitor_list:
-    - 192.168.3.8:6789
