--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,11 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{ .Values.name }}-secret"
+  name: "{{ .Chart.Name }}-{{ .Values.name }}"
 type: Opaque
 stringData:  
   # Your credentials to access Guacamole (required to create connections automatically for containers)
   guacamole-user: "{{ .Values.guacamoleConnectionCreation.guacamoleUser }}"
   guacamole-password: "{{ .Values.guacamoleConnectionCreation.guacamolePassword }}"
-  # Ceph auth key
-  key: "{{ .Values.ceph.key }}"
