--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -2,8 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ .Chart.Name }}-{{ .Values.name }}"
+  annotations:
+    "helm.sh/hook": "pre-install"
 type: Opaque
 stringData:  
   # Your credentials to access Guacamole (required to create connections automatically for containers)
   guacamole-user: "{{ .Values.guacamoleConnectionCreation.guacamoleUser }}"
   guacamole-password: "{{ .Values.guacamoleConnectionCreation.guacamolePassword }}"
+  container-user: "{{- include "chaimeleon.user.name" $ }}"
+  container-password: "{{ .Values.user.password }}"
