--- a/templates/pod.yaml
+++ b/templates/pod.yaml
@@ -5,7 +5,7 @@ metadata:
   name: "{{ .Values.name }}"
   
   labels:
-    {{- include "desktop-tensorflow.labels" . | nindent 4 }}    
+    {{- include "desktop-tensorflow.labels" . | nindent 4 }}
 spec:
   {{- with .Values.imagePullSecrets }}
   imagePullSecrets:
@@ -55,26 +55,25 @@ spec:
         #- name: VNC_PASSWORD
         #  value: "7d8b923c0eff11eb985c24418c"
 
-        ## Parameters required for automatically create the connection in Guacamole for this container
-        ## Comment this bloc if you don't want to create the connection
-        # - name: GUACAMOLE_URL
-        #   value: "{{ .Values.guacamoleConnectionCreation.guacamoleUrl }}"
-        # - name: GUACD_HOST
-        #   value: "{{ .Values.guacamoleConnectionCreation.guacdHost }}"
-        # - name: GUACAMOLE_USER
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: "{{ .Values.name }}-secret"
-        #       key: guacamole-user
-        # - name: GUACAMOLE_PASSWORD
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: "{{ .Values.name }}-secret"
-        #       key: guacamole-password
-        # - name: OIDC_URL
-        #   value: "https://chaimeleon-eu.i3m.upv.es/auth/realms/CHAIMELEON/protocol/openid-connect/token"
-        # - name: OIDC_GUACAMOLE_CLIENT_ID
-        #   value: "guacamole"
+{{- if .Values.guacamoleUserSecretName }}
+        # Parameters required for automatically create the connection in Guacamole for this container
+        - name: GUACAMOLE_URL
+          value: "{{ .Values.guacamoleConnectionCreation.guacamoleUrl }}"
+        - name: GUACD_HOST
+          value: "{{ .Values.guacamoleConnectionCreation.guacdHost }}"
+        - name: GUACAMOLE_USER
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.guacamoleUserSecretName }}"
+              key: user
+        - name: GUACAMOLE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.guacamoleUserSecretName }}"
+              key: password
+        - name: GUACAMOLE_CONNECTION_NAME
+          value: "{{- include "desktop-tensorflow.connectionName" . }}"
+{{- end }}
 
         - name: SSH_ENABLE_PASSWORD_AUTH
           value: "true"
