--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{ .Values.name }}-secret"
+  name: "{{ include "desktop-tensorflow.fullname" . }}"
 type: Opaque
 stringData:
   # Ceph auth key
