--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -6,3 +6,4 @@ type: Opaque
 stringData:
   # Ceph auth key
   key: "{{ .Values.ceph.key }}"
+  vnc_password: "{{ include "desktop-tensorflow.randomString" . }}"
