--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: "{{ .Chart.Name }}-{{ .Values.name }}"
+    name: "{{ include "desktop-tensorflow.fullname" . }}"
 spec:
     selector:
-        app: "{{ .Chart.Name }}-{{ .Values.name }}"
+        app: "{{ include "desktop-tensorflow.fullname" . }}"
     type: ClusterIP
     ports:
-      - name: sshd
-        port: 22
-        targetPort: 22
-      - name: vnc-gui
-        port: 5900
-        targetPort: 5900
+      - port: 2222
+        targetPort: sshd
+      - port: 5900
+        targetPort: vnc-gui
