add password to notes

--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: "{{ include "desktop-tensorflow.fullname" . }}"
 type: Opaque
 stringData:
-  vnc_password: "{{ include "desktop-tensorflow.randomString" . }}"
+  vnc_password: "{{ .Values.user.password }}"
   container-user: "{{- include "chaimeleon.user.name" $ }}"
   container-password: "{{ .Values.user.password }}"
