--- a/Chart.yaml
+++ b/Chart.yaml
@@ -8,14 +8,14 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.3.1
+version: 0.3.2
 
 # This is the version number of the application being deployed.
 # It is used for indicate the tag of the image to pull.
 appVersion: "2.2"
 
 
-home: https://chaimeleon.eu/
+home: https://github.com/chaimeleon-eu/helm-chart-desktop-tensorflow
 # icon: https://chaimeleon.eu/wp-content/uploads/2020/10/logo-chaimeleon.svg
 icon: https://pbs.twimg.com/profile_images/1329395797121769472/AXv64BOJ_400x400.jpg
 
