--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -4,6 +4,4 @@ metadata:
   name: "{{ include "desktop-tensorflow.fullname" . }}"
 type: Opaque
 stringData:
-  vnc_password: "{{ include "desktop-tensorflow.randomString" . }}"
-  container-user: "{{- include "chaimeleon.user.name" $ }}"
-  container-password: "{{ .Values.user.password }}"
+  container-password: "{{ include "desktop-tensorflow.randomString" . }}"
