--- a/templates/deployment_v2.yaml
+++ b/templates/deployment_v2.yaml
@@ -35,6 +35,15 @@ spec:
             secretRef:
                 name: "ceph-auth"
             readOnly: true
+        - name: shared-folder
+          cephfs:
+            path: "{{- include "chaimeleon.persistent_shared_folder.path" . -}}" 
+            user: "{{- include "chaimeleon.ceph.user" . -}}" 
+            monitors:
+                - "{{- include "chaimeleon.ceph.monitor" . -}}"  
+            secretRef:
+                name: "ceph-auth"
+            readOnly: true
         
         {{- range $datasetID := splitList "," .Values.datasets_list }}
         - name: "{{ $datasetID -}}"
@@ -56,23 +65,27 @@ spec:
 
       containers:
       - name: {{ .Chart.Name }}
-        image: "chaimeleon-eu.i3m.upv.es:10443/chaimeleon-library/ubuntu_python_tensorflow_gpu_desktop_vnc_sshd:{{ .Chart.AppVersion }}"
         imagePullPolicy: IfNotPresent
 {{- if .Values.requestGPU }}
+        image: "chaimeleon-eu.i3m.upv.es:10443/chaimeleon-library/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}cuda10"
         resources:
           limits:
             nvidia.com/gpu: 1 # requesting 1 GPU
+{{- else }}
+        image: "chaimeleon-eu.i3m.upv.es:10443/chaimeleon-library/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}"
 {{- end }}
         volumeMounts:
           - mountPath: "{{- include "chaimeleon.datalake.mount_point" . -}}"
             name: datalake
           - mountPath: "{{- include "chaimeleon.persistent_home.mount_point" . -}}"
             name: home
+          - mountPath: "{{- include "chaimeleon.persistent_shared_folder.mount_point" . -}}"
+            name: shared-folder
             
           {{- range $datasetID := splitList "," .Values.datasets_list }}
           - mountPath: "{{- include "chaimeleon.datasets.mount_point" $ -}}/{{- $datasetID -}}"
             name: "{{ $datasetID -}}"
-            {{- end }}
+          {{- end }}
 
         ports:
           - containerPort: 2222
