--- a/templates/deployment_v2.yaml
+++ b/templates/deployment_v2.yaml
@@ -34,7 +34,7 @@ spec:
                 - "{{- include "chaimeleon.ceph.monitor" . -}}"  
             secretRef:
                 name: "ceph-auth"
-            readOnly: true
+            readOnly: false
         - name: shared-folder
           cephfs:
             path: "{{- include "chaimeleon.persistent_shared_folder.path" . -}}" 
@@ -43,7 +43,7 @@ spec:
                 - "{{- include "chaimeleon.ceph.monitor" . -}}"  
             secretRef:
                 name: "ceph-auth"
-            readOnly: true
+            readOnly: false
         
         {{- range $datasetID := splitList "," .Values.datasets_list }}
         - name: "{{ $datasetID -}}"
