--- a/templates/deployment_v2.yaml
+++ b/templates/deployment_v2.yaml
@@ -62,18 +62,27 @@ spec:
         runAsGroup: {{ include "chaimeleon.group.gid" . }}
         fsGroup: {{ include "chaimeleon.user.uid" . }}
         supplementalGroups: [ {{ include "chaimeleon.ceph.gid" . }} ] 
+
+      priorityClassName: processing-applications
       
       containers:
       - name: {{ .Chart.Name }}
         imagePullPolicy: IfNotPresent
-        {{- if .Values.requestGPU }}
+        {{- if .Values.requests.gpu }}
         image: "chaimeleon-eu.i3m.upv.es:10443/chaimeleon-library/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}cuda10"
-        resources:
-          limits:
-            nvidia.com/gpu: 1 # requesting 1 GPU
         {{- else }}
         image: "chaimeleon-eu.i3m.upv.es:10443/chaimeleon-library/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}"
         {{- end }}
+        resources:
+          requests:
+            memory: "{{ .Values.requests.memory }}"
+            cpu: "{{ .Values.requests.cpu }}"
+        {{- if .Values.requests.gpu }}
+            nvidia.com/gpu: 1
+          limits:
+            nvidia.com/gpu: 1
+        {{- end }}
+        
         volumeMounts:
           - mountPath: "{{- include "chaimeleon.datalake.mount_point" . -}}"
             name: datalake
