--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-requestGPU: false
+requests: 
+  gpu: false
+  cpu: 1
+  memory: 2Gi
 
 datasets_list: ""
 
