Common functions moved to a new helpers file that can be included in other charts.

--- a/templates/deployment_v2.yaml
+++ b/templates/deployment_v2.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: "{{ include "desktop-tensorflow.fullname" . }}"
   annotations: 
-    {{- include "desktop-tensorflow.annotations" . | nindent 4 }}  
+    {{- include "chaimeleon.annotations" . | nindent 4 }}  
   labels:
     {{- include "desktop-tensorflow.labels" . | nindent 4 }}    
 spec:
