--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: "{{ include "desktop-tensorflow.fullname" . }}"
 type: Opaque
 stringData:
-  container-password: "{{ include "desktop-tensorflow.randomString" . }}"
+  container-password: "{{ include "utils.randomString" . }}"
