--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,13 +2,14 @@ apiVersion: v2
 
 
 name: desktop-tensorflow
-description: Deploy just a pod with TensorFlow oficial image with GPU enabled plus VNC and SSH services.
+# Short description (can be extended in the README.md)
+description: CHAIMELEON workstation with TensorFlow and graphical desktop environment
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.3.4
+version: 1.3.4
 
 # This is the version number of the application being deployed.
 # It is used for indicate the tag of the image to pull.
@@ -24,7 +25,9 @@ icon: https://raw.githubusercontent.com/chaimeleon-eu/helm-chart-desktop-tensorf
 
 sources:
   - https://github.com/chaimeleon-eu/workstation-images
-  - https://chaimeleon.eu/
+# - https://chaimeleon.eu/
+  - https://www.tensorflow.org/learn
+  - https://guacamole.apache.org/doc/gug/using-guacamole.html
 
 maintainers:  
   - name: Sergio Lopez Huguet
