--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -18,42 +18,16 @@ spec:
     spec:
       volumes:
         - name: datalake
-          cephfs:
-            path: "{{- include "chaimeleon.datalake.path" . -}}" 
-            user: "{{- include "chaimeleon.ceph.user" . -}}" 
-            monitors:
-                - "{{- include "chaimeleon.ceph.monitor" . -}}"  
-            secretRef:
-                name: "ceph-auth"
-            readOnly: true
+          {{- include "chaimeleon.datalake.volume" . | nindent 10 }}
         - name: home
-          cephfs:
-            path: "{{- include "chaimeleon.persistent_home.path" . -}}" 
-            user: "{{- include "chaimeleon.ceph.user" . -}}" 
-            monitors:
-                - "{{- include "chaimeleon.ceph.monitor" . -}}"  
-            secretRef:
-                name: "ceph-auth"
+          {{- include "chaimeleon.persistent_home.volume" . | nindent 10 }}
         - name: shared-folder
-          cephfs:
-            path: "{{- include "chaimeleon.persistent_shared_folder.path" . -}}" 
-            user: "{{- include "chaimeleon.ceph.user" . -}}" 
-            monitors:
-                - "{{- include "chaimeleon.ceph.monitor" . -}}"  
-            secretRef:
-                name: "ceph-auth"
+          {{- include "chaimeleon.persistent_shared_folder.volume" . | nindent 10 }}
         
         {{- if .Values.datasets_list }}
         {{- range $datasetID := splitList "," .Values.datasets_list }}
         - name: "{{ $datasetID -}}"
-          cephfs:
-            path: "{{- include "chaimeleon.datasets.path" $ -}}/{{- $datasetID -}}"
-            monitors:
-                - "{{- include "chaimeleon.ceph.monitor" $ -}}"  
-            user: "{{- include "chaimeleon.ceph.user" $ -}}" 
-            secretRef:
-                name: "ceph-auth"
-            readOnly: true 
+          {{- include "chaimeleon.dataset.volume" (list $ $datasetID) | nindent 10 }}
         {{- end }}
         {{- end }}
 
