--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -3,9 +3,9 @@ kind: Deployment
 metadata:
   name: "{{ include "desktop-tensorflow.fullname" . }}"
   annotations: 
-    {{- include "chaimeleon.annotations" . | nindent 4 }}  
+    {{- include "chaimeleon.annotations" . | nindent 4 }}
   labels:
-    {{- include "desktop-tensorflow.labels" . | nindent 4 }}    
+    {{- include "desktop-tensorflow.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
@@ -35,7 +35,7 @@ spec:
         runAsUser: {{ include "chaimeleon.user.uid" . }}
         runAsGroup: {{ include "chaimeleon.group.gid" . }}
         fsGroup: {{ include "chaimeleon.user.uid" . }}
-        supplementalGroups: [ {{ include "chaimeleon.ceph.gid" . }} ] 
+        supplementalGroups: [ {{ include "chaimeleon.ceph.gid" . }} ]
 
       priorityClassName: processing-applications
       
@@ -43,9 +43,9 @@ spec:
       - name: {{ .Chart.Name }}
         imagePullPolicy: IfNotPresent
         {{- if .Values.requests.gpu }}
-        image: "harbor.chaimeleon-eu.i3m.upv.es/chaimeleon-library/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}cuda10"
+        image: "{{ include "chaimeleon.library-url" . }}/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}cuda10"
         {{- else }}
-        image: "harbor.chaimeleon-eu.i3m.upv.es/chaimeleon-library/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}"
+        image: "{{ include "chaimeleon.library-url" . }}/ubuntu_python_tensorflow_desktop_vnc_sshd:{{ .Chart.AppVersion }}"
         {{- end }}
         resources:
           requests:
@@ -98,9 +98,9 @@ spec:
 
           # Parameters required for automatically create the connection in Guacamole for this container
           - name: GUACAMOLE_URL
-            value: "{{ .Values.guacamoleConnectionCreation.guacamoleUrl }}"
+            value: "{{ include "chaimeleon.guacamole-url" . }}"
           - name: GUACD_HOST
-            value: "{{ .Values.guacamoleConnectionCreation.guacdHost }}"
+            value: "{{ include "chaimeleon.guacd-host" . }}"
           - name: GUACAMOLE_USER
             valueFrom:
               secretKeyRef:
