--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -7,9 +7,9 @@ spec:
         app: "{{ include "desktop-tensorflow.fullname" . }}"
     type: ClusterIP
     ports:
-    - port: 2222
-      targetPort: 2222
-      name: sshd
-    - port: 5900
-      targetPort: 5900
-      name: vnc-gui
+    - name: sshd-svc
+      port: 2222
+      targetPort: sshd
+    - name: vnc-gui-svc
+      port: 5900
+      targetPort: vnc-gui
